--- a/task1-3.html
+++ b/task1-3.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="css/task1-3.css" rel="stylesheet">
 </head>
 <body>
-
+  <div class="container">
+      <div class="left">
+          <img src="image/touxiang.jpg" alt="avatar">
+          <p>团队名称</p>
+      </div>
+      <div class="right">
+          <p>个人logo</p>
+          <img src="image/touxiang.jpg" alt="avatar">
+          <img src="image/touxiang.jpg" alt="avatar">
+          <img src="image/touxiang.jpg" alt="avatar">
+          <img src="image/touxiang.jpg" alt="avatar">
+      </div>
+      <div class="center">
+      <h2>团队介绍</h2>
+      <p>大家好我是Nils,前端小小鸟，努力学习中</p>
+      <p>大家好我是Nils,前端小小鸟，努力学习中</p>
+      </div>
+  </div>
 </body>
 </html>
