--- a/task1-3.html
+++ b/task1-3.html
@@ -20,8 +20,8 @@
       </div>
       <div class="center">
       <h2>团队介绍</h2>
-      <p>大家好我是Nils,前端小小鸟，努力学习中</p>
-      <p>大家好我是Nils,前端小小鸟，努力学习中</p>
+      <p>大家好我们是革命友谊,前端小小鸟，努力学习中</p>
+      <p>大家好我们是革命友谊,前端小小鸟，努力学习中</p>
       </div>
   </div>
 </body>
