--- a/task1-3.html
+++ b/task1-3.html
@@ -9,7 +9,7 @@
   <div class="container">
       <div class="left">
           <img src="image/touxiang.jpg" alt="avatar">
-          <p>团队名称</p>
+          <p>革命友谊</p>
       </div>
       <div class="right">
           <p>个人logo</p>
